[project]
name = "hakkun-comfyui-nodes"
description = "Mainly its prompt generating by custom syntax. Prompt Parser, Prompt tags, Random Line, Calculate Upscale, Image size to string, Type Converter, Image Resize To Height/Width, Load Random Image, Load Text"
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/tudal/Hakkun-ComfyUI-nodes"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "hakkunn"
DisplayName = "Hakkun-ComfyUI-nodes"
Icon = ""
